# NoStrike

./: .gitignore  README.md  nostrike.py  pyproject.toml  test_nostrike.py
src/nostrike/: __init__.py
src/nostrike.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
